--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <meta property="og:site_name" content="MyBigas">
+  <meta property="og:url" content="https://www.mybigas.co/">
+  <meta property="og:title" content="Free Rice Delivery within Novaliches & North Caloocan">
+  <meta property="og:type" content="website">
+  <meta property="og:description"
+    content="MyBigas - Free Rice Delivery within Novaliches & North Caloocan. Premium Quality Rice">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Modern React Templates For SaaS, Hotels, Product, Marketing, or any other needs. Fully modular component
