--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>MyBigas</title>
+  <title>Free Rice Delivery in Novaliches & North Caloocan
+    &ndash; MyBigas</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169943770-1"></script>
   <script>
