--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Modern React Templates For SaaS, Hotels, Product, Marketing, or any other needs. Fully modular component
-      building blocks with prebuilt page examples" />
+  <meta name="description"
+    content="MyBigas - Free Rice Delivery within Novaliches & North Caloocan. Premium Quality Rice" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
