--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="canonical" href="https://www.mybigas.co/">
+
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
 
   <meta property="og:site_name" content="MyBigas">
   <meta property="og:url" content="https://www.mybigas.co/">
