--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <meta property="og:url" content="https://www.mybigas.co/">
   <meta property="og:title" content="Free Rice Delivery within Novaliches & North Caloocan">
   <meta property="og:type" content="website">
+  <meta property="og:image"
+    content="https://images.unsplash.com/photo-1536304993881-ff6e9eefa2a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=200&h=200&q=100">
   <meta property="og:description"
     content="MyBigas - Free Rice Delivery within Novaliches & North Caloocan. Premium Quality Rice">
 
